Fix FindBugs issues.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/codec/trunk@1153502 13f79535-47bb-0310-9956-ffa450edef68